// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarLink Component should match snapshot & display + if number > 9 1`] = `
<li
  className="m_n_li"
>
  <NavLink
    activeClassName="sidebar_active"
    className="m_n_a"
    exact={true}
    to="/"
  >
    <span
      className="m_n_text"
    >
      A label
    </span>
    <span
      className="m_n_new"
    >
      +
    </span>
  </NavLink>
</li>
`;

exports[`SideBarLink Component should match snapshot & show number (eg. unread noti.) 1`] = `
<li
  className="m_n_li"
>
  <NavLink
    activeClassName="sidebar_active"
    className="m_n_a"
    exact={true}
    to="/"
  >
    <span
      className="m_n_text"
    >
      A label
    </span>
    <span
      className="m_n_new"
    >
      4
    </span>
  </NavLink>
</li>
`;

exports[`SideBarLink Component should match snapshot 1`] = `
<li
  className="m_n_li"
>
  <NavLink
    activeClassName="sidebar_active"
    className="m_n_a"
    exact={true}
    to="/"
  >
    <span
      className="m_n_text"
    >
      A label
    </span>
  </NavLink>
</li>
`;
